# xournalpp-plugin-instructions

./: .gitignore  .luacheckrc  Makefile  README.md  RELEASE_TEMPLATE.md
.github/workflows/: push.yml
Examples/: copy_linux.sh  copy_windows.ps1  icons.odg
Examples/BrowserShortcut/: main.lua  plugin.ini
Examples/ChangeBackgroundToDots/: main.lua  plugin.ini
Examples/DrawGaussianCoordinateSystem/: main.lua  plugin.ini
Examples/ExampleDialogs/: main.lua
Examples/ExampleExternalCommands/: main.lua  plugin.ini
Examples/ExampleGlobalVariables/: main.lua
Examples/ExampleMinimal/: main.lua
Examples/ExampleToolbarIcon/: main.lua
Examples/ExampleToolbarIconCustom/: main.lua  plugin.ini
Examples/FlameshotShortcut/: main.lua  plugin.ini
Examples/GetCurrentDate/: main.lua  plugin.ini
Examples/WindowsScreenclipShortcut/: main.lua  plugin.ini
examples/: copy_windows.ps1  icons.odg
examples/BrowserShortcut/: description.txt  descriptionToolbar.txt  main.lua  plugin.ini
examples/ChangeBackground/: main.lua  plugin.ini
examples/ChangeBackgroundToDots/: description.txt  descriptionToolbar.txt  plugin.ini
examples/CoverPen/: main.lua  plugin.ini
examples/DrawGaussianCoordinateSystem/: description.txt  descriptionToolbar.txt  drawGaussianCoordinateSystem.lua  getCurrentToolColor.lua  main.lua  plugin.ini
examples/ExampleDialogs/: plugin.ini
examples/ExampleExternalCommands/: main.lua  plugin.ini
examples/ExampleGlobalVariables/: plugin.ini
examples/ExampleMinimal/: main.lua  plugin.ini
examples/ExampleMultipleScripts/: main.lua  plugin.ini  run.lua
examples/ExampleToolbarIcon/: main.lua  plugin.ini
examples/ExampleToolbarIconCustom/: main.lua  plugin.ini
examples/FlameshotShortcut/: description.txt  descriptionToolbar.txt  plugin.ini
examples/GetCurrentDate/: description.txt  descriptionToolbar.txt  main.lua  plugin.ini
examples/KeyboardShortcuts/: main.lua  plugin.ini
examples/ScreenshotSelection/: main.lua  plugin.ini
examples/SpectacleShortcut/: main.lua  plugin.ini
examples/WindowsScreenclipShortcut/: description.txt  descriptionToolbar.txt  main.lua  plugin.ini
examplesSharedLibrary/: README.md
examplesSharedLibrary/ExampleHighQualityVector/: CMakeLists.txt  README.md
examplesSharedLibrary/ExampleHighQualityVector/include/: fixWin32Filesystem.hpp  rasterizeVectorImage.hpp
examplesSharedLibrary/ExampleHighQualityVector/include/plugin/: util.hpp
examplesSharedLibrary/ExampleHighQualityVector/plugin/: getDocumentCenter.lua  mmInXournalUnit.lua  plugin.ini
examplesSharedLibrary/ExampleSharedLibraryObject/: CMakeLists.txt  README.md
examplesSharedLibrary/ExampleSharedLibraryObject/include/: customObject.hpp
examplesSharedLibrary/ExampleSharedLibraryObject/include/plugin/: plugin.hpp
examplesSharedLibrary/ExampleSharedLibraryObject/plugin/: main.lua  plugin.ini
examplesSharedLibrary/ExampleSharedLibraryObject/src/: customObject.cpp
examples_shared_lib/: CMakeLists.txt  PreLoad.cmake  README.md
examples_shared_lib/ExampleHighQualityVector/: CMakeLists.txt  README.md
examples_shared_lib/ExampleHighQualityVector/include/plugin/: plugin.hpp
examples_shared_lib/ExampleHighQualityVector/plugin/: main.lua
examples_shared_lib/ExampleHighQualityVector/src/: rasterizeVectorImage.cpp
examples_shared_lib/ExampleHighQualityVector/src/plugin/: rasterizeVectorImage.cpp
examples_shared_lib/ExampleSharedLibraryObject/: CMakeLists.txt  README.md
examples_shared_lib/ExampleSharedLibraryObject/include/: customObject.hpp
examples_shared_lib/ExampleSharedLibraryObject/include/plugin/: plugin.hpp
examples_shared_lib/ExampleSharedLibraryObject/plugin/: main.lua
examples_shared_lib/ExampleSharedLibraryObject/src/plugin/: helloWorld.cpp  loadCustomObject.cpp
